# Financial-bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: env.example
financial_bot/: __init__.py
financial_bot/app/: __init__.py  config.py
handlers/: expense_handler.py  export_handler.py  income_handler.py  menu_handler.py  report_handler.py  start_handler.py
migrations/: README  env.py
migrations/versions/: 20260601_0001_initial_schema.py  20260602_0002_remove_unclassified_category.py  20260602_0003_replace_category_taxonomy.py  20260602_0004_spending_limit_alerts.py  20260626_0005_bank_events.py  20260627_0006_bank_event_notification_status.py  20260627_0007_bank_category_learning.py  20260628_0008_income_general_category.py  20260628_0009_income_categories.py  20260628_0010_add_tbank_bank_event_source.py  20260629_0011_bank_event_source.py  20260629_0012_bank_category_rule_mode.py  20260702_0013_transaction_scope.py
scripts/: backup_sqlite.sh  docker-entrypoint.sh  seed_initial_data.py
services/: data_storage.py
tests/: test_project_bootstrap.py
tests/fixtures/: __init__.py  may_2026.py
tests/integration/: test_alias_service.py  test_auto_accounting_health_service.py  test_bank_event_repository.py  test_bank_event_source_service.py  test_bank_ingestion_endpoint.py  test_bank_ingestion_service.py  test_bank_learning_rule_service.py  test_bot_commit_safety.py  test_cashflow_service.py  test_category_settings_service.py  test_chart_service.py  test_export_service.py  test_google_sheets_service.py  test_income_entry_router.py  test_may_fixture_reports.py  test_migrations.py  test_month_close_service.py  test_month_report_service.py  test_reminder_service.py  (+10 more)
(+127 files in other folders)
