[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-finance-bot"
version = "0.1.0"
description = "Telegram bot for family finance tracking with fast expense entry and reports."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Family Finance Bot Maintainers" },
]
dependencies = [
  "aiogram>=3.28,<4",
  "aiohttp-socks>=0.10,<1",
  "aiosqlite>=0.21,<1",
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "google-api-python-client>=2.180,<3",
  "google-auth>=2.40,<3",
  "matplotlib>=3.10,<4",
  "openpyxl>=3.1,<4",
  "pandas>=2.3,<3",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "SQLAlchemy>=2.0,<3",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.15,<1",
  "httpx>=0.28,<1",
]

[project.scripts]
family-finance-bot = "financial_bot.app.bot.main:main"
family-finance-bank-ingest = "financial_bot.app.web.main:main"
family-finance-bank-source = "financial_bot.app.cli.bank_event_source:main"

[tool.setuptools.packages.find]
include = ["financial_bot*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["financial_bot", "tests"]
force-exclude = true
extend-exclude = [
  ".codex-memory",
  ".venv",
  "csv_reports",
  "exports",
]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "RUF",
  "SIM",
  "UP",
]
ignore = [
  "RUF001",
  "RUF002",
  "RUF003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
